# fazzk

./: .env  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .tauri-private-key  .tauri-private-key.pub  CHANGELOG.md  FIGMA_DESIGN_GUIDE.md  GEMINI.md  LICENSE-EULA.md  README.md  RELEASE_GUIDE.md  SETTINGS_CENTRALIZATION_SUMMARY.md  auth.js  build_log.txt  build_log2.txt  check_icon_size.js  chzzk.js  config.js  eslint.config.js  final_release_notes.md  final_release_notes_v2.md  final_release_notes_v3.md  git_log.txt  index.html  logger.js  main.js  package-lock.json  package.json  preload.js  prepare_notes.js  prepare_notes_v2.js  prepare_notes_v3.js  release_notes.md  resize_icon.js  server.js  test-settings.html  tsconfig.json  updater.js  (+2 more)
.claude/: settings.local.json
chrome_extension/: background.js  manifest.firefox.json  manifest.json  popup.html  popup.js
docs/: API.md  ARCHITECTURE.md  IMPROVEMENT_ROADMAP.md  TROUBLESHOOTING.md
fazzk-tauri/: CHANGELOG.md  README.md  build-errors.txt  convert_icon.py  key_info.txt  key_utf8.txt  package-lock.json  package.json
pages/: notifier.html  start.html
pages-svelte/: package-lock.json  package.json
scripts/: clean-dist.cjs  cleanup-project.cjs  fazzk-obs-connector.html  move-build-files.js  obs-redirector.html  zip-extension.cjs  zip-extension.js
src/: App.svelte  app.css  vite-env.d.ts
src-tauri/: .clippy.toml  Cargo.toml  cargo_error.txt  tauri.conf.json  tauri.conf.json.bak
src-tauri/capabilities/: default.json
src-tauri/src/: chzzk.rs  lib.rs  server.rs  server.rs.backup  state.rs  updater.rs  websocket.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/locales/: ko-KR.nsh
(+100 files in other folders)
