[package]
name = "fazzk-tauri"
version = "2.6.0"
description = "치지직 팔로워 실시간 알림 앱"
authors = ["minseok"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fazzk_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tower = "0.5"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Clippy 린팅 설정
[lints.clippy]
# 성능 관련 린트
needless_collect = "warn"
map_flatten = "warn"
single_match_else = "warn"

# 가독성 관련 린트
explicit_iter_loop = "warn"
manual_let_else = "warn"
redundant_closure_for_method_calls = "warn"

# 정확성 관련 린트
clone_on_ref_ptr = "warn"
mem_forget = "deny"
